Kubernetes/gitlab-arm64/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gitlab
  labels:
    app.kubernetes.io/part-of: gitlab
